[workspace]
members = [
    "rustbook_main",
    "rustbook_ownership",
    "rustbook_guessing_game",
    "rustbook_branches",
    "rustbook_functions",
    "rustbook_variables",
]
name = "rust_learn"
version = "0.1.0"
authors = ["chaz-kiker <chaz-kiker@lambdastudents.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
